--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "heroku": "^7.56.0",
     "mongoose": "^5.12.14",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
