--- a/api/package.json
+++ b/api/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js"
-  },
-  "author": "Logan Brock",
-  "license": "MIT",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "heroku": "^7.56.0",
-    "mongoose": "^5.12.14",
-    "multer": "^1.4.2",
-    "nodemon": "^2.0.7",
-    "path": "^0.12.7"
-  }
+	"name": "api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"server": "nodemon index.js",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run index\" \"npm run client\""
+	},
+	"author": "Logan Brock",
+	"license": "MIT",
+	"dependencies": {
+		"bcrypt": "^5.0.1",
+		"concurrently": "^6.2.0",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"heroku": "^7.56.0",
+		"mongoose": "^5.12.14",
+		"multer": "^1.4.2",
+		"nodemon": "^2.0.7",
+		"path": "^0.12.7"
+	}
 }
